; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtDnodeInt.spec.c_taosSendMsgToDnode.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtDnodeInt.spec.c_taosSendMsgToDnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32*, i32*, i32 }

@.str = private unnamed_addr constant [24 x i8] c"msg:%s is sent to dnode\00", align 1
@taosMsg = common dso_local global i32* null, align 8
@vnodeProcessMsgFromMgmtSpec = common dso_local global i32 0, align 4
@dmQhandle = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosSendMsgToDnode(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** @taosMsg, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 -1
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i64
  %13 = getelementptr inbounds i32, i32* %8, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @mTrace(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @vnodeProcessMsgFromMgmtSpec, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 3
  store i32 %16, i32* %17, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 -1
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i8* %19, i8** %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  store i32* null, i32** %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32* null, i32** %22, align 8
  %23 = load i32, i32* @dmQhandle, align 4
  %24 = call i32 @taosScheduleTask(i32 %23, %struct.TYPE_3__* %7)
  ret i32 0
}

declare dso_local i32 @mTrace(i8*, i32) #1

declare dso_local i32 @taosScheduleTask(i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
